--- a/src/App.css
+++ b/src/App.css
@@ -1,590 +1,38 @@
-html, body {
-  height: 100vh;
-  width: 100vw;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  background-color: black;
+.App {
+  text-align: center;
 }
 
-@keyframes rotate {
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
   from {
-    rotate: 0deg;
+    transform: rotate(0deg);
   }
-  
-  50% {
-    scale: 1 1.5;
-  }
-  
   to {
-    rotate: 360deg;
-  }
-}
-
-#blob {
-  background-color: white;
-  height: 34vmax;
-  aspect-ratio: 1;
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  translate: -50% -50%;
-  border-radius: 50%;
-  background: linear-gradient(to right, aquamarine, mediumpurple);
-  animation: rotate 20s infinite;
-  opacity: 0.6;
-  z-index: -1;
-}
-
-#blur {
-  height: 100vh;
-  width: 100vw;
-  position: fixed;
-  z-index: 1;
-  backdrop-filter: blur(250px);
-  overflow: hidden;
-}
-
-.body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  width: 100vh;
-  position: relative;
-  z-index: 3;
-}
-
-.navbar-container {
-  display: flex;
-  justify-content: flex-end;
-  width: 100%;
-  padding: 20px;
-  padding-right: 5%;
-  top: 0;
-  z-index: 3;
-}
-
-.navbar {
-  display: flex;
-  gap: 75px; 
-  font-size: 1em;
-  font-family: 'Open Sans', sans-serif;
-}
-
-.title:before {
-  content: ">\A0";
-}
-
-.title {
-  font-size: 4.5em;
-  color: #747fe0;
-  display: flex;
-  align-items: center;
-  margin: 0;
-  white-space: nowrap;
-  font-family: "Merriweather", serif;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.title #typed-text, .title .caret {
-  display: inline-block; 
-  vertical-align: middle; 
-}
-
-.title .caret {
-  background-color: rgba(116, 127, 224, 0.65);
-  width: 0.5em;
-  height: 1em;
-}
-
-.title .caret.blink {
-  animation: caret-blink 1s steps(1) infinite;
-}
-
-@keyframes caret-blink {
-  0%, 50% {
-    opacity: 1;
-  }
-  51%, 100% {
-    opacity: 0;
-  }
-}
-
-.main-container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  padding: 20px;
-  width: 100%;
-  margin-top: 5em;
-  position: relative;
-  z-index: 3;
-}
-
-.description {
-  text-align: left;
-  font-size: 1.3em;
-  line-height: 40px;
-  color: white;
-  margin: 80px 0;
-  width: 100%;
-  font-family: 'Roboto', sans-serif;
-}
-
-#terminal {
-  background-color: #282a36; 
-  color: #f8f8f2; 
-  font-family: 'Courier New', Courier, monospace; 
-  width: 100%; 
-  margin: 0; 
-  border-radius: 8px;
-  position: relative;
-  overflow: hidden;
-  padding: 0; 
-  margin-right: auto;
-  margin-top: 3em;
-  z-index: 3;
-}
-
-.terminal-header {
-  background-color: #44475a; 
-  padding: 10px 20px; 
-  width: 100%; 
-  box-sizing: border-box; 
-  display: flex;
-  align-items: center;
-  justify-content: flex-start; 
-}
-
-.button-container {
-  margin-left: 0px; 
-}
-
-.button {
-  height: 12px;
-  width: 12px;
-  border-radius: 50%; 
-  display: inline-block;
-  margin-right: 5px; 
-  cursor: pointer;
-}
-
-.close { background-color: #ff5555; }
-.minimize { background-color: #f1fa8c; }
-.maximize { background-color: #50fa7b; }
-
-.terminal-body {
-  padding: 20px; 
-  color: #f8f8f2;
-  box-shadow: 0 50px 100px rgba(50, 50, 93, .15), 0 15px 35px rgba(50, 50, 93, .2), 0 5px 15px rgba(0, 0, 0, .12);
-}
-
-.command {
-  color: #f7f7f7; 
-  margin-top: 20px; 
-}
-
-.output {
-  color: #e7d184; 
-  margin-left: 20px;
-}
-
-.last-line {
-  display: flex;
-  align-items: center;
-  background-color: #282a36; 
-  color: #f8f8f2; 
-}
-
-.effect {
-  background-color: #ffffff;
-  color: #ffffff; 
-  margin-top: 20px;
-  animation: caret-blink 1s steps(1) infinite;
-  width: 0.5em;
-  height: 1em;
-  margin-left: 10px;
-  
-}
-
-a {
-  color: #35feff;
-  text-decoration: none;
-}
-.different {
-  color: #747fe0;
-}
-
-.Projects {
-  width: 100%;
-  align-items: flex-start;
-  margin-top: 35px;
-  position: relative;
-  z-index: 3;
-}
-
-.header-wrapper {
-  margin-top: 2em;
-}
-.project-header {
-  color: white;
-  display: inline-block;
-  font-family: 'Open Sans', sans-serif;
-}
-
-.project-card-wrapper {
-  display: flex;
-  gap: 4vmin;
-  position: relative;
-  left: 0;      
-  width: 100%;  
-  user-select: none; 
-  cursor: grab;
-  transition: transform 0.5s ease;
-  transform: translate3d(0,0,0);
-  align-items: center; 
-  justify-content: start;
-  
-}
-.project-card-wrapper > .image {
-  position: relative;
-  width: 40vmin;
-  height: 56vmin;
-  object-fit: cover;
-  object-position: center center;
-  transition: transform 0.5s ease, opacity 0.5s ease;
-  transform: translate3d(0,0,0);
-  flex: 0 0 auto;
-  margin-right: 10px;
-  transition: transform 0.5s ease, object-position 0.5s ease;
-}
-
-.project-card-wrapper > .image:hover {
-  transform: translateY(-7px);
-  box-shadow: 0 10px 30px rgba(0,0,0,0.5);  
-}
-
-.project-card-wrapper > .image.expanded {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw !important;
-  height: 100vh !important;
-  object-fit: cover !important;
-  z-index: 4; /* High enough to be on top */
-  cursor: default;
-  transform: scale(1.1);
-  opacity: 1;
-}
-
-.project-card {
-  position: relative;
-  width: 250px;
-  border: 3px solid rgba(10, 138, 177, 0.476);
-  aspect-ratio: 10 / 16 ;
-  background-color: rgba(10, 138, 177, 0.476);
-  transition: transform 0.5s ease, width 0.5s ease, height 0.5s ease, position 0.5s ease;
-  
-}
-#outer-container {
-  width: 100%;
-  position: relative; 
-}
-
-h2 {
-  color: white;
-}
-
-h2:hover {
-  background-color: white;
-  color: black;
-}
-
-.detail-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  z-index: 1000;
-  padding: 40px;
-  box-sizing: border-box;
-  opacity: 0;
-  transition: opacity 0.5s ease;
-}
-
-.detail-overlay.active {
-  opacity: 1;
-  
-}
-
-.detail-content {
-  width: 80%; 
-  display: flex;
-  flex-direction: row; 
-  justify-content: space-between; 
-  align-items: center; 
-  margin-bottom: 20px; 
-  gap: 65px;
-}
-
-.detail-content h1 {
-  font-size: 2.5rem; 
-  flex-basis: 30%; 
-  margin-right: 10px; 
-  font-family: "Merriweather", serif;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.detail-content p {
-  flex-grow: 1; 
-  font-size: 1.5rem;
-  text-align: left; 
-}
-
-.project-technologies {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom: 20px; 
-}
-
-.tech-tag {
-  background-color: rgba(0, 0, 0, 0.29);
-  color: white;
-  border: solid 2px #4CAF50;
-  padding: 5px 10px;
-  margin: 5px;
-  border-radius: 5px;
-  font-size: 0.9rem;
-  font-weight: bold;
-}
-
-.buttons-container {
-  display: flex;
-  justify-content: center;
-}
-
-.live-demo-button {
-  padding: 10px 20px;
-  margin: 0 10px;
-  border: none;
-  color: white;
-  background-color: #747fe0;
-  text-decoration: none;
-  font-size: 1rem;
-  border-radius: 5px;
-  transition: all 0.15s ease;
-  box-shadow: 0 4px 6px rgba(50,50,93,.11),0 1px 3px rgba(0,0,0,.08);
-  filter: saturate(1.5);
-}
-
-.view-source-button {
-  padding: 10px 20px;
-  margin: 0 10px;
-  border: none;
-  color: #747fe0;
-  background-color: white;
-  text-decoration: none;
-  font-size: 1rem;
-  border-radius: 5px;
-  transition: all 0.15s ease;
-  box-shadow: 0 4px 6px rgba(50,50,93,.11),0 1px 3px rgba(0,0,0,.08);
-}
-
-.live-demo-button:hover {
-  transform: translateY(-1px);
-  box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1),
-  0 3px 6px rgba(0, 0, 0, 0.08);
-  background: #7795f8;
-}
-
-.view-source-button:hover {
-  transform: translateY(-1px);
-  box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1),
-  0 3px 6px rgba(0, 0, 0, 0.08);
-  background: rgb(225, 225, 225);
-}
-
-.back-button {
-  position: absolute;
-  top: 20px;
-  left: 180px;
-  padding: 10px 15px;
-  font-size: 1.5rem;
-  background-color: transparent;
-  color: white;
-  border: none;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  border-radius: 50%;
-}
-
-.back-button:hover {
-  background-color: white;
-  color: black;
-  
-}
-
-.contact {
-  margin-top: 3em;
-  width: 100%;
-  z-index: 2;
-}
-
-.contact-header {
-  color: white;
-  display: inline-block;
-  font-family: 'Open Sans', sans-serif;
-}
-
-.links {
-  display: flex;
-  justify-content: center;
-  margin-top: 150px;
-  font-size: 1.5em;
-  padding-bottom: 100px;
-}
-
-.links span:not(:last-child)::after {
-  content: "||";
-  color: #ccc; 
-  margin: 0 50px;
-}
-
-.footer {
-  padding: 100px;
-  z-index: 2;
-  color: white;
-  font-size: 15px;
-}
-
-.terminal-slide-up {
-  animation: slideUp 0.5s ease-out forwards;
-  transform: translateY(100%); 
-}
-
-@keyframes slideUp {
-  to {
-    transform: translateY(0);
-  }
-}
-
-.detail-content-youtube {
-  color: black;
-}
-
-/* Mobile devices */
-@media (max-width: 840px) {
-  
-  body, html{
-    margin: 0;
-    padding: 0;
-    min-height: 100%;
-    width: 100%;
-    overflow-x: hidden;
-  }
-
-  *, *:before, *:after { 
-    box-sizing: border-box;
-  }   
-  
-  .body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    box-sizing: border-box; 
-  }
-
-  #blur {
-    width: 100vw;
-    height: 100%;
-    
-  }
-  
-  .navbar-container {
-    display: flex;
-    justify-content: center;
-  }
-  .navbar h2 {
-    font-size: 1em;
-  }
-  .main-container {
-    width: calc(100vw - 40px);
-    padding: 0;
-  }
-  .description {
-    font-size: 1.2em;
-  }
-  .title {
-    font-size: 2.3em;
-  }
-  #terminal {
-    width: calc(100vw - 40px); 
-    margin: 0;
-    margin-top: 2em; 
-    border-radius: 20; 
-  }
-
-  .Projects {
-    width: calc(100vw - 40px);
-  }
-  
-
-  .contact, .footer {
-    width: calc(100vw - 40px);
-  }
-
-  .contact h2 {
-    font-size: 1.5em;
-  }
-  .links {
-    font-size: 1.2em;
-  }
-
-  .links span:not(:last-child)::after {
-    content: "||";
-    color: #ccc;
-    margin: 0 25px;
-  }
-  .detail-content {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-  .detail-content p {
-    font-size: 1.2em;
-  }
-  .back-button {
-    top: 20px;
-    left: 35px;
-  }
-  .tech-tag {
-    font-size: 0.8em;
-  }
-  .Projects h2 {
-    font-size: 1.5em;
-  }
-  .footer {
-    font-size: 0.8em;
-    text-align: center;
-  }
-
-  .terminal-slide-up {
-    animation: none;
-    transform: none;
+    transform: rotate(360deg);
   }
 }
